cmake_minimum_required(VERSION 3.24)
project(MyCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(MT MT.cpp)
add_executable(MT2 MT2.cpp)

add_executable(DJI DJI.cpp)
add_executable(DEWU DEWU.cpp)
add_executable(TT TT.cpp)

add_executable(ZSBank ZSBank.cpp)
add_executable(YT YT.cpp)
add_executable(KS KS.cpp)
add_executable(BD BD.cpp)
#add_executable(GLD GLD.cpp)
add_executable(SXF SXF.cpp)
add_executable(MR MR.cpp)
add_executable(MHY MHY.cpp)
add_executable(ALIYUN ALIYUN.cpp)
